# adapter-agent

./: .gitignore  GEMINI.md  README.md  ask.py  benchmark.py  check_self_consistency.py  curriculum.py  debug_docker.py  debug_gen_exercise.py  debug_gen_topic.py  display_qra.py  docker-compose.yml  gen_exercises.py  gen_topics.py  h_tinker.py  hierarchical_hindsight.py  hindsight_generator.py  inspect_exam.py  justfile  new_curriculum.py  plan_hh.md  pubapi.txt  pyproject.toml  rl_tinker.py  schema.prisma  sft_tinker.py  start_vllm.py  tinker_hello.py  topic_db.py  train_sft.py
.agent/skills/code_quality/: SKILL.md
.agent/skills/oai_utils_usage/: SKILL.md
.agent/skills/tinker_training_usage/: SKILL.md
adapter_agent/: __init__.py  agent.py  data.py  model_helper.py  qra.py  savable.py
adapter_agent/exam/: creator.py  exam.py  pipeline.py  repository.py  runner.py  syllabus.py
adapter_agent/hierarchical/: analyzer.py  decomposer.py  gh.py  grpo.py  h_agent.py  main.py  qra_pipeline.py  runner.py  solve_verify.py  solver.py  state.py  types.py  verifier.py
adapter_agent/hierarchical/agent/: analyzer.py  augmentor.py  base.py  decomposer.py  generator.py  h_agent.py  knowledge_internalizer.py  knowledge_normalizer.py  knowledge_slicer.py  (+10 more)
adapter_agent/internalize/: global_state.py  granularizer.py  internalizer.py  qra_generator.py  simple_pipeline.py  studier.py  wiki_curator.py  wiki_explorer.py  wiki_integrator.py
adapter_agent/internalize_toobig/: global_state.py  internalizer.py  qra_generator.py  types.py
adapter_agent/rl/: advantage.py  completer.py  config.py  env.py  litellm_completer.py  postgres_db.py  rl_database.py  shared_sampling_client.py  solved_subtask.py  task_net.py  trajectory.py  trajectory_db.py  unirl_state.py
adapter_agent/simple_internalizer/: __init__.py  data_sources.py  distilled_qra_manager.py  evaluate_worker.py  executor.py  pipeline.py  rl_worker_pool.py  rollout_engine.py  rollout_persistence.py  seed_loaders.py  sft_qra_loaders.py  star_pipeline.py  star_rollout_actor.py  star_rollout_pool.py  successful_qra_buffer.py  training_runner.py  types.py
adapter_agent/study/: qra_budget.py  qra_distiller.py  runner.py
adapter_agent/util/: config_util.py  exception.py  logger_util.py  parsing.py  task_queue.py
curriculum/: database.py  exercise.py  filter.py  library.py  topic.py
docs/: restudy_pipeline.md
graphvis/: .gitignore  index.html  package-lock.json  package.json
graphvis/public/: data.json
graphvis/src/: App.css  App.tsx  GraphComponent.tsx  constants.ts  index.css  types.ts  utils.ts
scripts/: build_benchmark.py  build_numrs2_benchmark.py  chat.py  check_reflector.py  check_wiki_curator.py  classify_benchmark_apis.py  cpt.py  db_clean.py  debug_chat_eval.py  debug_solve_verify.py  dump_canonical_rollouts.py  enhance_benchmark.py  eval_tinker.py  experiment_internalizer.py  experiment_oc.py  filter_diverse_benchmark.py  find_numerical_crates.py  find_quality_trending_crates.py  gen_sft.py  grade_human_verdicts.py  internalize.py  library_selection_requirements.md  passatk_restudy.py  poc_synthesize_qra.py  prepare_granular_knowledge.py  qra_fill.py  refilter_benchmark.py  remove_checkpoints.py  restudy_pipeline.py  restudy_planner.py  rewire_eval.py  rewire_sft.py  rl_tinker.py  run_continue_rl.py  run_continue_rl_with_study.py  run_eval.py  run_openbook_rejection.py  run_passatk.py  run_simple_internalize.py  run_star.py  (+14 more)
scripts/legacy/: train_recipes.py
scripts/low_priority/: ask_checkpoint.py  find_breakthroughs.py  qra_fill.py  study2.py  study2_augment.py  study2_decompose.py
templates/rust_boilerplate/: .gitignore  Cargo.toml
tests/: conftest.py  test_agent.py  test_exam_lifecycle.py  test_rust_env.py  utils.py
(+53 files in other folders)
