[project]
name = "adapter_agent"
version = "0.1.0"
description = "OpenHands-quality coding agent using openai-agents-sdk"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "mcp>=1.25.0",
    "peft>=0.18.1",
    "polars>=1.37.1",
    "python-dotenv>=1.0.0",
    "rich>=14.2.0",
    "torch>=2.9.0",
    "transformers>=4.57.3",
    "trl>=0.26.2",
    "flash-attn",
    "vllm>=0.13.0",
    "coder-mcp",
    "litellm==1.81",
    "oai-utils",
    "openai>=2.14.0",
    "openai-agents>=0.6.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
no-binary-package = ["flash-attn"]
no-build-isolation-package = ["flash-attn"]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
coder-mcp = { path = "../coder-mcp", editable = true }
torch = [
    { index = "pytorch-cu130" }
]
vllm = [
    { index = "vllm-cu130" }
]
oai-utils = { path = "../oai_utils", editable = true }
[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]



[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"

[[tool.uv.index]]
name = "vllm-cu130"
url = "https://wheels.vllm.ai/0.13.0/cu130"
